# misis_mlops_Okunev

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/: nlp_utils.py
tests/: test_nlp_utils.py
