[project]
name = "ml-ops"
version = "0.1.0"
description = ""
authors = [
    {name = "Okunev Daniil",email = "samedan_1248@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
